<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.timelapse.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_graphique"
        android:name="com.example.timelapse.ui.graphique.GraphiqueFragment"
        android:label="@string/title_graphique"
        tools:layout="@layout/fragment_galerie" />

    <fragment
        android:id="@+id/navigation_galerie"
        android:name="com.example.timelapse.ui.galerie.GalerieFragment"
        android:label="@string/title_galerie"
        tools:layout="@layout/fragment_graphique" />

</navigation>